Add OCR functionality and update project structure
- Implemented image processing and OCR for PDF files using PaddleOCR and VietOCR.
- Added new scripts for data handling and model initialization.
- Updated .gitignore to exclude additional files.
- Modified VSCode settings for improved development experience.

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,12 @@ cropped_text_images
 cropped_text_images/*.*
 test_data
 annotation.txt
+error.log
+data_server
+check_image_text_file.py
+create_data.py
+images
+output
+output.txt
+get_data_from_server.py
+recog_data
